--- a/src/css/Skills.css
+++ b/src/css/Skills.css
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: center;
   padding-top: 3rem;
-  font-family: 'ArcadeClass', sans-serif;
+  font-family: monospace;
   overflow-y: auto;
 }
 .skills-container:before, .skills-container:after {
@@ -57,7 +57,7 @@
 }
 
 .skills-title {
-  font-size: 3rem;
+  font-size: 2rem;
   background: linear-gradient(to right, #ffc0cb, #ffb6c1, #ffa6d1);
   -webkit-background-clip: text;
   background-clip: text;
